--- a/templates/blog_left_side.html
+++ b/templates/blog_left_side.html
@@ -31,3 +31,12 @@
         <hr>
     </div>
 </div>
+<nav aria-label="Page navigation" class="blog_pagination d-flex justify-content-center">
+    <ul class="pagination">
+        <li class="page-item active"><a class="page-link" href="#"><i class="fa fa-arrow-left" style="padding-right: 5px;"></i>Prev</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#" ">Next<i style="padding-left: 5px;" class="fa fa-arrow-right"></i></a></li>
+    </ul>
+</nav>
